--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,11 @@ header.masthead{
     opacity: 75%;
 }
 
+.navbar{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
+}
