--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ nav li{
 }
 
 .hero {
+    margin-top: 5rem;
     background-image: linear-gradient(rgba(8,15,40,.8),rgba(8,15,40,.9)),url("/SIR/img/background.jpg");
     background-color: #fafafa;
     background-repeat: no-repeat;
@@ -40,3 +41,24 @@ nav li{
     margin-bottom: 0;
 }
 
+.page {
+    padding: 6rem 0;
+}
+
+section#contact form#contactForm .form-group {
+    margin-bottom: 1.5rem;
+  }
+section#contact form#contactForm .form-group input,
+section#contact form#contactForm .form-group textarea {
+  padding: 1.25rem;
+}
+section#contact form#contactForm .form-group input.form-control {
+  height: auto;
+}
+section#contact form#contactForm .form-group-textarea {
+  height: 100%;
+}
+section#contact form#contactForm .form-group-textarea textarea {
+  height: 100%;
+  min-height: 10rem;
+}
