--- a/css/styles.css
+++ b/css/styles.css
@@ -45,20 +45,10 @@ nav li{
     padding: 6rem 0;
 }
 
-section#contact form#contactForm .form-group {
-    margin-bottom: 1.5rem;
-  }
-section#contact form#contactForm .form-group input,
-section#contact form#contactForm .form-group textarea {
+.form input{
   padding: 1.25rem;
 }
-section#contact form#contactForm .form-group input.form-control {
-  height: auto;
-}
-section#contact form#contactForm .form-group-textarea {
-  height: 100%;
-}
-section#contact form#contactForm .form-group-textarea textarea {
-  height: 100%;
-  min-height: 10rem;
+
+.form-message input{
+  min-height: 12.5rem;
 }
