--- a/css/styles.css
+++ b/css/styles.css
@@ -14,22 +14,28 @@ nav li{
 /* Hero */
 
 .hero {
-    margin-top: 5rem;
+    margin-top: 4rem;
     background-image: linear-gradient(rgba(8,15,40,.8),rgba(8,15,40,.9)),url("/SIR/img/background.jpg");
     background-color: #fafafa;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+    width: 100%;
+    height: 20rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo {
-   width: 100px;
-   height: 100px;
+   width: 10rem;
+   height: 10rem;
 }
 
 .search-bar {
     width: 10rem;
+    justify-content: center;
+    align-items: center;
 }
 
 /* About */
