--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ nav li{
 
 .hero {
     margin-top: 4rem;
-    background-image: linear-gradient(rgba(8,15,40,.8),rgba(8,15,40,.9)),url("/SIR/img/background.jpg");
+    background-image: linear-gradient(rgba(8,15,40,.8),rgba(8,15,40,.9));
     background-color: #fafafa;
     background-repeat: no-repeat;
     background-position: center center;
