--- a/css/styles.css
+++ b/css/styles.css
@@ -12,34 +12,18 @@ nav li{
 }
 
 /* Hero */
-
 .hero {
-    margin-top: 4rem;
+    height: 100%;
+    padding-top: 10rem;
     background-image: linear-gradient(rgba(8,15,40,.8),rgba(8,15,40,.9));
-    background-color: #fafafa;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center;
     background-attachment: fixed;
     background-size: cover;
-    width: 100%;
-    height: 20rem;
-    justify-content: center;
-    align-items: center;
-}
 
-.logo {
-   width: 10rem;
-   height: 10rem;
-}
-
-.search-bar {
-    width: 10rem;
-    justify-content: center;
-    align-items: center;
 }
 
 /* About */
-
 hr.divider{
     height: 0.3rem;
     max-width: 4rem;
@@ -49,7 +33,6 @@ hr.divider{
 }
 
 /* Team */
-
 .team-member {
     margin-bottom: 3rem;
     text-align: center;
@@ -66,7 +49,6 @@ hr.divider{
 }
 
 /* Form */
-
 .form input{
   padding: 1.25rem;
   margin-bottom: 0.5rem;
