cor de fundo e salientei o que falta fazer

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 
 .page {
     padding: 6rem 0;
-    background: linear-gradient(to right, #ebebeb, #bdbebd);
+    background: linear-gradient(to right, #eeeeee, #bdbebd);
 }
 
 nav li{
