--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ hr.divider{
 .team-member img {
     width: 14rem;
     height: 14rem;
-    border: 0.5rem solid rgba(128, 128, 128, 0.5);
+    border: 0.5rem solid black
 }
 .team-member h4, .team-member .h4 {
     margin-top: 2rem;
